# smt-backend

./: .black  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  pre-commit  pyproject.toml
alembic/: env.py
alembic/versions/: 071a43d080c1_add_new_unem_type_to_position.py  0cbe7bbe9ce2_initial.py  15e900b450d0_remove_amount_field.py  1c8e7a9a7917_better_accuracy_for_price_history_.py  230e00c2d5d1_make_sell_price_required.py  3fd8281e4211_add_bought_at_and_listed_at_fields_to_.py  41d60b014346_test.py  56db63cd56b5_enum.py  57fdcf52657d_add_new_position_status.py  622ac9eafe53_add_trading_settings_table.py  6ffd2e64a5a7_decrease_accuracy.py  77aa3f81333e_create_pool_items_table.py  a2831d43b4ab_create_item_stats.py  a2e48825e292_remove_quantity_add_asset_id.py  bccd3dfa8861_create_positions_table.py  be504f24c012_add_uniqueness_contraint.py  c7a499120ddf_rename_item_stat_to_price_history_record.py  d8f4c4baeb30_add_new_fields_to_poolitem.py  ebb79532a6ee_create_pool_items_table.py  f1e610cd5955_add_app_id_and_context_id_to_pool_items.py  fa5a3ab71829_add_new_indicator_fields_to_pool_item_.py  fc6221676c0b_add_a_reverse_relation_to_the_pool_table.py
smt/: celery_app.py  logger.py  main.py
smt/core/: config.py
smt/db/: database.py  dependencies.py  models.py
smt/repositories/: dependencies.py  items.py  pool_items.py  position.py  price_history.py  settings.py  stats.py
smt/schemas/: inventory.py  pool.py  position.py  price_history.py  settings.py  stats.py
(+59 files in other folders)
