[tool.poetry]
name = "smt"
version = "0.1.0"
description = ""
authors = ["SlightlyMadMax"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.0"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
jinja2 = "^3.1.5"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
steampy = {git = "https://github.com/SlightlyMadMax/steampy.git", rev = "master"}
alembic = "^1.16.1"
python-multipart = "^0.0.20"
tenacity = "^9.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
